--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.37.1",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -42,8 +43,10 @@
     "@types/react-dom": "^18",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.17",
+    "drizzle-zod": "^0.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "pg": "^8.11.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
