--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
     "form": "^0.2.4",
     "hono": "^4.3.7",
